IDI-127: Fix to header and footer Header: so logo doesn't shift up when font size increased. Footer: so logos wrap nicely in narrow window.

--- a/style/outsidein.css
+++ b/style/outsidein.css
@@ -46,6 +46,15 @@ body {
     font-family: "OpenSans";
 }
 
+.outside-in-container .outside-in-headerTitle .outside-in-headerTitle-icon:before {
+    font-size: 7.0rem;
+    font-family: "outside-in";
+    content: "\e603";
+    color: #C0D660;
+    padding-left: 3.0rem;
+
+}
+/*
 .outside-in-container .outside-in-headerTitle h1:before {
     position: absolute;
     font-size: 7.0rem;
@@ -55,6 +64,7 @@ body {
     padding-left: 3.0rem;
     margin-top: -9rem;
 }
+*/
 
 .outside-in-container .outside-in-Logo {
     position: absolute;
@@ -101,14 +111,14 @@ body {
 
 .outside-in-container .outside-in-idi-Link:before {
     font-family: "outside-in-IDRC-text";
-    font-size: 3.4rem;
+    font-size: 3rem;
     content: "\e600";
     color: #FFF;
 }
 
 .outside-in-container .outside-in-Ontario-Government-Link:before {
     font-family: "outside-in";
-    font-size: 3.2rem;
+    font-size: 3rem;
     content: "\e602";
     color: #FFF;
 }
@@ -197,10 +207,11 @@ body {
     word-spacing: 1.8rem;
     font-family: "OpenSans-Semibold";
     font-size: 0.9rem;
+    height: 3rem;
 }
 
 .outside-in-container .outside-in-headerTitle {
-    padding: 13% 0 7% 0;
+    padding: 3rem 0 7% 0;
 }
 
 .outside-in-container .outside-in-mainContent {
@@ -208,8 +219,8 @@ body {
 }
 
 .outside-in-container .outside-in-rowPadding {
-    padding-right: 20%;
-    padding-left: 20%;
+    padding-right: 18%;
+    padding-left: 18%;
     max-width: none;
 }
 
@@ -311,7 +322,7 @@ body {
 }
 
 .outside-in-container .outside-in-footerColumn {
-    padding: 2.5rem 0 2rem 3.5rem;
+    padding: 2.5rem 0 2rem 1.5rem;
 }
 
 .outside-in-container .outside-in-iconLink {
